Added TODO items so I'm versioning just for fun.

--- a/assets/index.html
+++ b/assets/index.html
@@ -22,9 +22,11 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 quoteDisplay">
+            <!--TODO get nice google fonts for title and quote-->
             <h1>Daily Wisdom</h1>
             <p>Placeholder for Quote</p>
             <div>
+                <!--TODO get twitter glyphicon-->
                 <button class="btn">Placeholder for Tweeting Yo</button>
                 <button class="btn btn-primary">Refresh</button>
             </div>
@@ -35,3 +37,5 @@
 </div>
 </body>
 </html>
+
+
