Crushin' it on a Friday night.

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,26 +16,29 @@
             crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Ranga" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
+        <h1>Daily Wisdom</h1>
+    </div>
+    <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 quoteDisplay">
-            <!--TODO get nice google fonts for title and quote-->
-            <h1>Daily Wisdom</h1>
-            <p>Placeholder for Quote</p>
-            <div>
+            <p>"The Devil will have his due."</p>
+            <h3> - the Devil</h3>
+            <div class="row">
                 <!--TODO get twitter glyphicon-->
-                <button class="btn">Placeholder for Tweeting Yo</button>
-                <button class="btn btn-primary">Refresh</button>
+                <a href="#" ></a>
+                <button class="btn btn-primary btnRow">Refresh</button>
             </div>
-
         </div>
         <div class="col-md-4"></div>
     </div>
 </div>
 </body>
+<script src="scripts/main.js"></script>
 </html>
 
 
