--- a/assets/index.html
+++ b/assets/index.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 quoteDisplay">
-            <p>"The Devil will have his due."</p>
+            <p class="quotation">"The Devil will have his due."</p>
             <h3> - the Devil</h3>
             <div class="row">
                 <!--TODO get twitter glyphicon-->
