Got JSON to work.

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <h1>Daily Wisdom</h1>
+        <h1>Daily Programmer Wisdom</h1>
     </div>
     <div class="row">
         <div class="col-md-4"></div>
@@ -29,7 +29,9 @@
             <p class="quotation">
                 <span id="quote"></span>
             </p>
-            <h3> - the Devil</h3>
+            <h3>
+                <span id="author"></span>
+            </h3>
             <div class="row">
                 <!--TODO get twitter glyphicon-->
                 <a href="#" ></a>
