--- a/assets/index.html
+++ b/assets/index.html
@@ -33,9 +33,8 @@
                 <span id="author"></span>
             </h3>
             <div class="row">
-                <!--TODO get twitter glyphicon-->
-                <a href="#" ></a>
-                <button class="btn btn-primary btnRow">Refresh</button>
+                <a  class="twitter-share-button btn btn-primary tweetBtn" id="link">Tweet Wisdom</a>
+                <button class="btn btn-primary btnRow">Refresh Wisdom</button>
             </div>
         </div>
         <div class="col-md-4"></div>
